Opened 19 years ago

Closed 17 years ago

#393 closed bug (fixed)

problems in device_manager

Reported by: korli Owned by: axeld
Priority: normal Milestone: R1
Component: System/Kernel Version:
Keywords: Cc: diver, umccullough, mikael.konradson@…
Blocked By: Blocking:
Platform: All

Description

When running rev16975 image in VirtualPC, I get the following stackcrawl.

Attachments (2)

ide_isa_dm_KDL.JPG (113.4 KB ) - added by korli 19 years ago.
ide_isa publish_channel
haiku.txt (16.6 KB ) - added by korli 19 years ago.
serial log

Download all attachments as: .zip

Change History (21)

comment:1 by korli, 19 years ago

The weird thing is : it happens when Haiku is on secondary slave. It doesn't happen when Haiku is on primary master or primary slave or secondary master.

comment:2 by axeld, 19 years ago

* Bug 389 has been marked as a duplicate of this bug. *

comment:3 by axeld, 19 years ago

Cc: mikael.konradson@… added

comment:4 by axeld, 19 years ago

I've now reverted hrev16946, does this help the issue? This seems to be a bug in the device manager, that I cannot reproduce.

comment:5 by korli, 19 years ago

I didn't test your change yet, but I'm wondering why the ide_isa module tries to publish its channels. The code

if (pnp->acquire_io_resources(resources, resource_handles) != B_OK) return B_OK;

in ide_isa:probe_channel() should return and nothing should get published since the pci ide driver handles the ide channels.

comment:6 by axeld, 19 years ago

Maybe it's first to acquire the resources, maybe there is some kind of race condition. In any way, it shouldn't crash either :-)

Feel free to investigate into this problem, that would be very much appreciated, since I cannot reproduce it :-/

by korli, 19 years ago

Attachment: ide_isa_dm_KDL.JPG added

ide_isa publish_channel

by korli, 19 years ago

Attachment: haiku.txt added

serial log

comment:7 by korli, 19 years ago

Resolution: fixed

comment:8 by korli, 19 years ago

Your revert to hrev16946 seems to have made the bug disappeared. It could also be a race condition indeed. I added some debug output in ide_adapter to know if it fails because of resource acquirement, and which one.

Anyway the crash is gone.

comment:9 by korli, 19 years ago

Status: newclosed

comment:10 by axeld, 19 years ago

Status: closedreopened

comment:11 by axeld, 19 years ago

Resolution: fixed

comment:12 by axeld, 19 years ago

Changed summary and opened it again, since the actual problem remains unsolved.

comment:13 by axeld, 19 years ago

Summary: crash in device_managerproblems in device_manager

comment:14 by umccullough@…, 19 years ago

I also will give this a try tonight to see if it resolves the issue I was having stated in #389

comment:15 by umccullough@…, 19 years ago

Cc: umccullough@… added

comment:16 by umccullough@…, 19 years ago

Yes, reverting the change from hrev16746 has resolved the crashing problem here also.

comment:17 by diver, 19 years ago

Cc: diver added

comment:18 by marcusoverhagen, 19 years ago

did hrev17619 change the behavior?

comment:19 by axeld, 17 years ago

Platform: All
Resolution: fixed
Status: reopenedclosed

Outdated.

Note: See TracTickets for help on using tickets.