Commented out removing the /dev/bus/scsi/raw device for IDE devices. This seems to cause some problems with the device manager that needs to be investigated, see bug #393 and #389.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16978 a95241bf-73f2-0310-859d-f6bbb57e9c96